--- a/main.css
+++ b/main.css
@@ -1,5 +1,185 @@
-table, td,th,
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lucida Sans';
+}
+
+main {
+    width: 98%;
+    margin: 0 auto;
+}
+
+h1 {
+    padding: 30px;
+    text-align: center;
+    font-size: 3em;
+    border-bottom: 2px solid black;
+}
+
+#matriculasPrueba {
+    border: 2px solid rgb(3, 72, 128);
+    background-color: rgba(3, 72, 128, 0.103);
+    position: absolute;
+    right: 10px;
+    margin: 5px 25px 0 0;
+}
+
+#matriculasPrueba ul {
+    padding: 5px;
+    color: darkblue;
+    list-style: none;
+    text-align: center;
+}
+
+#matriculasPrueba ul li:first-of-type {
+    padding-top: 5px;
+}
+
+#matriculasPrueba ul li {
+    color: darkgreen;
+    font-weight: bold;
+}
+
+form {
+    margin-top: 25px;
+    padding: 10px;
+    border-bottom: 2px solid black;
+}
+
+form input:first-of-type {
+    padding-left: 2px;
+    width: 200px;
+    font-size: 0.9em;
+    color: rgb(194, 25, 25);
+    margin: 3px 5px 5px 0;    
+}
+
+label {
+    display: block;
+}
+
+span {
+    font-size: 0.9em;
+    color: red;
+    font-style: italic;
+}
+
+#verificar,
+#vaciar {
+    width: 120px;
+    padding: 3px;
+    margin-bottom: 25px;
+    box-shadow: 1px 1px 2px 1px;
+    display: block;
+    
+}
+
+#vaciar {
+    float: right;
+    margin-right: 22px;
+    margin-top: 3px;
+}
+
+#mensaje {
+    text-align: center;
+    padding: 5px;
+    font-size: 1.5em;
+    background-color: black;
+    border-radius: 10px;
+    width: 80%;
+    margin: 10px auto;
+    color: rgb(47, 255, 40);
+    box-shadow: 0px 0px 3px 1px rgb(47, 255, 40);
+}
+
+#divMensaje {
+    display: none;
+}
+
+table {
+    width: 95%;
+    margin: 0 auto;
+    border: 2px solid rgb(0, 0, 0);
+    background-color: rgba(255, 255, 240, 0.219);
+}
+
+th {
+    background-color: rgb(1, 37, 48);
+    color: white;
+    padding: 5px;
+}
+
+th:not(:first-child) {
+    border-left: 1px dotted white;
+}
+
+td:not(:first-child) {
+    border-left: 1px dotted black;
+    cursor: pointer;
+}
+
+td:not(:first-child):hover {
+    color:blue;
+    text-decoration: underline;
+}
+
+td {
+    border-bottom: 1px solid rgb(0, 0, 102);
+    padding: 3px;
+    text-align: center;
+    color: rgb(2, 53, 13);
+}
+
+td:first-child {
+    font-style: italic;
+    font-size: 0.9em;
+}
+
+table,
+td,
+th,
 tr {
-    border: 1px solid black;
     border-collapse: collapse;
+}
+
+tfoot td {
+    text-align: left;
+    color: black;
+    padding: 5px;
+    background-color: rgba(251, 255, 0, 0.322);
+}
+
+tfoot td span {
+    color: rgb(97, 3, 3);
+}
+
+#gridContainer {
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 0.7fr 0.3fr;
+}
+
+#gridContainer>div:last-child {
+    border: 1px dotted black;
+    padding: 5px;
+    color: rgb(0, 71, 71);
+    width: 95%;
+    background-color: rgba(211, 211, 211, 0.096);
+}
+
+#gridContainer p {
+    font-size: 1.2em;
+    text-decoration: underline;
+}
+
+#datosCompletos ul {
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
+#datosCompletos ul li {
+    color: darkblue;
+    padding: 2px;
+    border-bottom: 1px dotted;
 }
