--- a/main.css
+++ b/main.css
@@ -23,11 +23,12 @@ h1 {
     position: absolute;
     right: 10px;
     margin: 5px 25px 0 0;
+    box-shadow: 0 0 3px;
 }
 
 #matriculasPrueba ul {
     padding: 5px;
-    color: darkblue;
+    color: darkred;
     list-style: none;
     text-align: center;
 }
@@ -37,7 +38,7 @@ h1 {
 }
 
 #matriculasPrueba ul li {
-    color: darkgreen;
+    color: darkslategray;
     font-weight: bold;
 }
 
@@ -51,6 +52,7 @@ form input:first-of-type {
     padding-left: 2px;
     width: 200px;
     font-size: 0.9em;
+    text-indent: 5px;
     color: rgb(194, 25, 25);
     margin: 3px 5px 5px 0;    
 }
@@ -60,7 +62,7 @@ label {
 }
 
 span {
-    font-size: 0.9em;
+    font-size: 0.8em;
     color: red;
     font-style: italic;
 }
@@ -68,17 +70,21 @@ span {
 #verificar,
 #vaciar {
     width: 120px;
+    font-size: 1em;
+    width: 150px;
     padding: 3px;
     margin-bottom: 25px;
-    box-shadow: 1px 1px 2px 1px;
+    box-shadow: 1px 1px 3px ;
     display: block;
-    
+    cursor: pointer;
 }
 
 #vaciar {
     float: right;
+    padding: 5px;
     margin-right: 22px;
     margin-top: 3px;
+    width: 180px;
 }
 
 #mensaje {
@@ -163,7 +169,7 @@ tfoot td span {
 #gridContainer>div:last-child {
     border: 1px dotted black;
     padding: 5px;
-    color: rgb(0, 71, 71);
+    color: darkslategray);
     width: 95%;
     background-color: rgba(211, 211, 211, 0.096);
 }
@@ -182,4 +188,8 @@ tfoot td span {
     color: darkblue;
     padding: 2px;
     border-bottom: 1px dotted;
+}
+
+#datosCompletos {
+    box-shadow: 0 0 5px;
 }
